--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>La aplicación esta corriendo!</h1>
-
+	<div id="contenedor"> </div>
 	<script src="./index.js" type="module"></script>
 </body>
 
